--- a/index.html
+++ b/index.html
@@ -1,41 +1,72 @@
 <!DOCTYPE html>
-<html lang="th">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>เว็บของไทน์</title>
-  <link rel="stylesheet" href="style.css">
+  <title>⚠ SYSTEM HACKED ⚠</title>
+  <style>
+    body {
+      background: black;
+      color: #00ff00;
+      font-family: 'Courier New', Courier, monospace;
+      font-size: 15px;
+      padding: 20px;
+      overflow: hidden;
+      white-space: pre-wrap;
+      animation: flicker 0.1s infinite; /* หน้าจอกระพริบ */
+    }
+
+    @keyframes flicker {
+      0% { background-color: black; }
+      50% { background-color: darkred; }
+      100% { background-color: black; }
+    }
+
+    #terminal {
+      height: 100vh;
+      overflow-y: auto;
+    }
+
+    .blinker {
+      display: inline-block;
+      width: 8px;
+      height: 16px;
+      background-color: #00ff00;
+      animation: blink 0.6s infinite;
+    }
+
+    @keyframes blink {
+      50% { opacity: 0; }
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <h1>ยินดีต้อนรับสู่เว็บคนหล่อที่ชื่อว่าไทน์</h1>
-    <nav>
-      <a href="#about">เกี่ยวกับเรา</a>
-      <a href="#contact">ติดต่อ</a>
-    </nav>
-  </header>
+  <div id="terminal"></div><span class="blinker"></span>
 
-  <main>
-    <section id="about">
-      <h2>เกี่ยวกับเรา</h2>
-      <p>นี้คือเว็บไซต์ทดลองกของผม</p>
-    </section>
+  <script>
+    const terminal = document.getElementById("terminal");
+    const lines = [];
 
-    <section id="contact">
-      <h2>ติดต่อ</h2>
-      <form id="contactForm">
-        <input type="text" id="name" placeholder="ชื่อของคุณ" required>
-        <input type="email" id="email" placeholder="อีเมลของคุณ" required>
-        <textarea id="message" placeholder="ข้อความ..." required></textarea>
-        <button type="submit">ส่งข้อความ</button>
-      </form>
-    </section>
-  </main>
+    for (let i = 1; i <= 300; i++) {
+      lines.push(`[${i}] SYSTEM LOG >>> Unauthorized root access detected from IP 10.0.${Math.floor(Math.random()*255)}.${Math.floor(Math.random()*255)} ::: Injecting Trojan-X${Math.floor(Math.random()*9999)} into /sys/core/kernel ::: STATUS: CRITICAL | DISK FAILURE`);
+    }
 
-  <footer>
-    <p>&copy; 2025 TINE</p>
-  </footer>
+    lines.push("\n═══════════════════════════════════════════════════════════════════════════════");
+    lines.push("☠️ SYSTEM CRASH INITIATED ☠️");
+    lines.push("🔐 All files encrypted");
+    lines.push("📡 Sending device logs to unknown node...");
+    lines.push("📷 Webcam access granted...");
+    lines.push("💀 YOUR SYSTEM HAS BEEN HIJACKED 💀");
 
-  <script src="script.js"></script>
+    let i = 0;
+
+    function typeLine() {
+      if (i >= lines.length) return;
+      terminal.innerHTML += lines[i++] + "\n";
+      terminal.scrollTop = terminal.scrollHeight;
+      setTimeout(typeLine, 8); // พิมพ์เร็วมาก
+    }
+
+    typeLine();
+  </script>
 </body>
 </html>
